# syck

./: Cargo.toml
src/: main.rs
