[package]
name = "syck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3"
lazy_static = "1.4.0"
ifaces = "0.1.0"
qrcode-generator = "4.1.2"
urlencoding = "2.1.0"
actix-multipart = "0.4.0"
web-view = "0.7.3"
tokio = { version = "1", features = ["full"] }